--- a/templates/backend.yml.j2
+++ b/templates/backend.yml.j2
@@ -1,10 +1,12 @@
+name: {{project_name}}-{{tier}}
 services:
   {{ service_name }}:
     image: {{ docker_image }}
-    container_name: {{ service_name }}
+    container_name: "{{ project_name }}-db"
     restart: unless-stopped
 
 {% if add_labels %}
+
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.{{service_name}}.rule={{ traefik_rule }}"
@@ -21,3 +23,4 @@ networks:
   {{ network_name }}:
     name: {{ network_name }}
     external: true
+
