--- a/templates/database.yml.j2
+++ b/templates/database.yml.j2
@@ -1,8 +1,8 @@
-name: {{project_name}}-{{tier}}
+name: {{service_name}}
 services:
-  {{ service_name }}:
+  {{service_name}}:
     image: {{ docker_image }}
-    container_name: {{ service_name }}
+    container_name: {{service_name}}
     restart: unless-stopped
 
 {% if db_type == "postgresql" %}
@@ -13,7 +13,7 @@ services:
 {% endif %}
 
     volumes:
-      - {{project_name}}-{{tier}}:{{volume_path}}
+      - {{service_name}}:{{volume_path}}
       
 {% if add_labels %}
     labels:
