--- a/templates/backend.yml.j2
+++ b/templates/backend.yml.j2
@@ -1,7 +1,7 @@
 name: {{ service_name }}
 services:
   {{service_name}}:
-    image: {{ docker_image }}
+    image: "{{ docker_image }}:{{ docker_image_tag }}"
     container_name: {{ service_name }}
     restart: unless-stopped
 
